# how_to_test_package_size

./: CMakeLists.txt  android_build.sh  ios_build.sh  main.cpp
include/: simple_decoder.h
src/: CMakeLists.txt  simple_decoder.cpp  versionscript
